Fixed Activites cards blank space + added content alignment

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,8 @@ a {
 
 .activites-cards .card {
     height: 100%;
+    display: flex;
+    flex-direction: column;
     padding: 0;
 }
 
@@ -371,8 +373,10 @@ a {
 }
 
 .activites-cards .card-content {
-    padding: 20px 19px;
-    padding-top: 16px;
+    padding: 16px 19px;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
 }
 
 /****** Footer ***********/
